[gd_scene load_steps=52 format=3 uid="uid://b3m773nyxq4ks"]

[ext_resource type="Script" path="res://Scripts/stormhead.gd" id="1_8406n"]
[ext_resource type="Texture2D" uid="uid://boq8qsrsj8ef7" path="res://Sprites/small moidle.png" id="2_dapxv"]
[ext_resource type="Texture2D" uid="uid://ctdepgcfikrpn" path="res://Sprites/small modeath and damagedt.png" id="3_iw78p"]
[ext_resource type="PackedScene" uid="uid://cv85w822t7o8t" path="res://Scenes/mob_health.tscn" id="3_ycmqh"]
[ext_resource type="Texture2D" uid="uid://c4c3t466fdpuo" path="res://Sprites/small morun.png" id="5_josr5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iwqqo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qgspt"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 0, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_stvye"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 39, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_lexki"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 78, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_03yrn"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 117, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqlv5"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 156, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv25o"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 195, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx7xx"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 234, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ult34"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 273, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls4kb"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 312, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_of4t4"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 0, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij604"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 39, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_bufyy"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 78, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmlqf"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 117, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_y77ic"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 156, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_stf6v"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 195, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4vc1"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 234, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q6d7"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 273, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mecp"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 312, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvv6q"]
atlas = ExtResource("2_dapxv")
region = Rect2(0, 0, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiy7f"]
atlas = ExtResource("2_dapxv")
region = Rect2(0, 39, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0fjd"]
atlas = ExtResource("2_dapxv")
region = Rect2(0, 78, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddk62"]
atlas = ExtResource("2_dapxv")
region = Rect2(0, 117, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_42bcv"]
atlas = ExtResource("2_dapxv")
region = Rect2(0, 156, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7xk"]
atlas = ExtResource("2_dapxv")
region = Rect2(0, 195, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5v34"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 0, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwvd7"]
atlas = ExtResource("3_iw78p")
region = Rect2(0, 39, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk17r"]
atlas = ExtResource("5_josr5")
region = Rect2(0, 0, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxmyr"]
atlas = ExtResource("5_josr5")
region = Rect2(0, 39, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_exonj"]
atlas = ExtResource("5_josr5")
region = Rect2(0, 78, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijarm"]
atlas = ExtResource("5_josr5")
region = Rect2(0, 117, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg3x7"]
atlas = ExtResource("5_josr5")
region = Rect2(0, 156, 82, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv85g"]
atlas = ExtResource("5_josr5")
region = Rect2(0, 195, 82, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_5jj3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgspt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stvye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lexki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03yrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqlv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv25o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx7xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ult34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls4kb")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_of4t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij604")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bufyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmlqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y77ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stf6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4vc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q6d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mecp")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvv6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiy7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0fjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddk62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42bcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie7xk")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5v34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwvd7")
}],
"loop": false,
"name": &"Take_Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk17r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxmyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exonj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijarm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg3x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv85g")
}],
"loop": true,
"name": &"Walk",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_f5w1l"]
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_b4i5w"]
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.766667, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u8vy0"]
length = 0.857143
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_kyfbu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kwqgm"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Take_Hit"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_re0fb"]
length = 0.857143
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qedbp"]
_data = {
"Attack": SubResource("Animation_f5w1l"),
"Death": SubResource("Animation_b4i5w"),
"Idle": SubResource("Animation_u8vy0"),
"RESET": SubResource("Animation_kyfbu"),
"Take_Hit": SubResource("Animation_kwqgm"),
"Walk": SubResource("Animation_re0fb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yg6gd"]
radius = 21.0238

[sub_resource type="GDScript" id="GDScript_i3kek"]
script/source = "extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	$HitBox/CollisionShape2D.disabled = true


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_4h5t3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_re12j"]
radius = 21.2132

[sub_resource type="CircleShape2D" id="CircleShape2D_mwrux"]
radius = 128.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_8406n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_iwqqo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(27, -10)
sprite_frames = SubResource("SpriteFrames_5jj3r")
animation = &"Attack"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qedbp")
}

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="AttackCollision" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
shape = SubResource("CircleShape2D_yg6gd")

[node name="DamageBox" type="Node2D" parent="AttackDirection"]
script = SubResource("GDScript_i3kek")

[node name="HurtBox" type="Area2D" parent="AttackDirection/DamageBox"]
collision_layer = 16
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox"]
shape = SubResource("CircleShape2D_4h5t3")

[node name="HitBox" type="Area2D" parent="AttackDirection/DamageBox"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox"]
shape = SubResource("CircleShape2D_re12j")
disabled = true

[node name="MobHealth" parent="." instance=ExtResource("3_ycmqh")]
position = Vector2(0, -33)
scale = Vector2(0.1, 0.1)

[node name="Agra zone" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Agra zone"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Agra zone/Area2D"]
shape = SubResource("CircleShape2D_mwrux")

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="Agra zone/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Agra zone/Area2D" to="." method="_on_area_2d_body_exited"]
